--- a/client/app/login/login.component.html
+++ b/client/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="clearfix">
+<div class="clearfix pt4">
     <div class="col col-4"></div>
     <div class="col col-4">
         <mat-card class="margin-top-50 indigo-background-color">
