--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -1,7 +1,5 @@
-<div class="flex">
-    <toolbar></toolbar>
-    
-    <div class="width-100 mt4">
+<div class="flex">    
+    <div class="width-100">
         <div class="content">
             <router-outlet></router-outlet>
         </div>
