--- a/client/app/shared/toolbar/toolbar.component.html
+++ b/client/app/shared/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
     <span>
-        <a style="color: white; text-decoration: none;" [routerLink]="['/home']">Angular Material 5</a>
+        <a style="color: white; text-decoration: none;" [routerLink]="['/home']">Smart Copy</a>
     </span>
 
     <span class="toolbar-spacer"></span>
