--- a/client/app/dashboard/change-password/change-password.component.html
+++ b/client/app/dashboard/change-password/change-password.component.html
@@ -1,4 +1,4 @@
-<div class="margin-top-50 clearfix pt4">
+<div class="clearfix pt4">
     <div class="col col-4"></div>
     <div class="col col-4">
         <mat-card class="indigo-background-color">
