--- a/client/app/dashboard/main/main.component.html
+++ b/client/app/dashboard/main/main.component.html
@@ -1,4 +1,4 @@
-<div class="clearfix margin-top-50 pt4">
+<div class="clearfix pt4">
     <div class="col col-3"></div>
     <div class="col col-6 flex justify-center">
         <div>
