--- a/client/app/login/login.component.html
+++ b/client/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="clearfix pt4">
     <div class="col col-4"></div>
     <div class="col col-4">
-        <mat-card class="margin-top-50 indigo-background-color">
+        <mat-card class="mt4 indigo-background-color">
             <mat-card-header class="mb-2">
                 <div>
                     <h2 class="white-text-color">Login</h2>
