--- a/client/app/login/register/register.component.html
+++ b/client/app/login/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="clearfix">
     <div class="col col-4"></div>
     <div class="col col-4">
-        <mat-card class="margin-top-50 indigo-background-color">
+        <mat-card class="mt4 indigo-background-color">
             <mat-card-header>
                 <div>
                     <h2 class="white-text-color">Register</h2>
