--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -7,11 +7,13 @@
 @import "https://fonts.googleapis.com/css?family=Roboto:400,300";
 @import '../../node_modules/@angular/material/_theming.scss';
 @import "../../node_modules/basscss/css/basscss.min.css";
+
 @include mat-core();
 $primary: mat-palette($mat-indigo);
 $accent: mat-palette($mat-grey);
 $theme: mat-light-theme($primary, $accent);
 @include angular-material-theme($theme);
+
 h1 {
     color: blue;
 }
@@ -26,22 +28,22 @@ h1 {
 }
 
 .white-background-color {
-    background: white;
+    background: mat-color($mat-gray, 50);
 }
 
 .white-text-color {
-    color: white;
+    color: mat-color($mat-gray, 50);;
 }
 
 .white-input {
-    color: white;
+    color: mat-color($mat-gray, 50);
     .mat-input-placeholder {
-        color: white !important;
+        color: mat-color($mat-gray, 50) !important;
     }
     .mat-input-underline {
         background: mat-color($mat-grey, 300);
         .mat-input-ripple {
-            background: white;
+            background: mat-color($mat-gray, 50);
         }
     }
 }
@@ -56,4 +58,8 @@ h1 {
   
 .toolbar-spacer {
     flex: 1 1 auto;
+}
+
+div.mat-card-header-text {
+    margin: 0;
 }
