--- a/client/app/shared/toolbar/toolbar.component.html
+++ b/client/app/shared/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="mat-elevation-z6">
     <span>
         <a style="color: white; text-decoration: none;" [routerLink]="['/home']">Smart Copy</a>
     </span>
