--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -1,12 +1,20 @@
-@import './login/login.component.scss';
-@import './dashboard/dashboard.component.scss';
-@import './dashboard/user/user.component.scss';
-@import './loader.scss';
-@import './utility.scss';
 @import "https://fonts.googleapis.com/css?family=Material+Icons";
 @import "https://fonts.googleapis.com/css?family=Roboto:400,300";
+
 @import '../../node_modules/@angular/material/_theming.scss';
 @import "../../node_modules/basscss/css/basscss.min.css";
+
+@import './loader.scss';
+@import './utility.scss';
+
+@import './login/login.component.scss';
+@import './shared/toolbar/toolbar.component.scss';
+
+@import './dashboard/dashboard.component.scss';
+
+@import './dashboard/user/user.component.scss';
+
+@import './dashboard/main/main.component.scss';
 
 @include mat-core();
 $primary: mat-palette($mat-indigo);
@@ -46,6 +54,10 @@ h1 {
             background: mat-color($mat-gray, 50);
         }
     }
+}
+
+.disabled-text {
+    color: mat-color($mat-gray, 500)
 }
 
 .white-progress-bar .mat-progress-bar-fill::after {
