--- a/client/app/dashboard/user/change-password/change-password.component.html
+++ b/client/app/dashboard/user/change-password/change-password.component.html
@@ -1,12 +1,14 @@
 <div class="clearfix pt4">
-    <div class="col col-4"></div>
+    <div class="col col-4">&nbsp;</div>
     <div class="col col-4">
         <mat-card class="indigo-background-color">
             <mat-card-header class="flex justify-center items-center">
-                <mat-icon class="white-text-color mr1 font-size-30" style="height: 100%;">security</mat-icon>
+                <div>
+                    <mat-icon class="white-text-color mr1 font-size-30" style="height: 100%;">security</mat-icon>
+                </div>
 
                 <div>
-                    <h2 class="white-text-color mb0">
+                    <h2 class="white-text-color my0">
                         Change Password 
                     </h2>
                 </div>
