--- a/client/app/login/login.component.html
+++ b/client/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="clearfix pt2">
-    <div class="col col-3"></div>
+    <div class="col col-3">&nbsp;</div>
     <div class="col col-6">
         <mat-card class="m4 indigo-background-color">
             <div class="width-100 logo-container">
