--- a/client/app/dashboard/user/change-password/change-password.component.html
+++ b/client/app/dashboard/user/change-password/change-password.component.html
@@ -1,34 +1,50 @@
-<div class="clearfix pt4">
-    <div class="col col-4">&nbsp;</div>
-    <div class="col col-4">
-        <mat-card class="indigo-background-color">
-            <mat-card-header class="flex justify-center items-center">
-                <div>
-                    <mat-icon class="white-text-color mr1 font-size-30" style="height: 100%;">security</mat-icon>
+<div class="clearfix pt2">
+    <div class="col col-3">&nbsp;</div>
+    <div class="col col-6">
+        <mat-card class="m4 indigo-background-color">
+            <div class="width-100 logo-container">
+                <img src="/images/icon.png" alt="logo" class="logo indigo-background-color" >
+            </div>
+            <mat-card-header class="mt3 mb2 flex justify-center items-center">
+                <div class="mr2" style="margin-top: -3px;">
+                    <mat-icon class="white-text-color mr1 font-size-40" style="height: 100%;">security</mat-icon>
                 </div>
-
                 <div>
-                    <h2 class="white-text-color my0">
-                        Change Password 
-                    </h2>
+                    <h1 class="white-text-color my1 mb2">Change Password</h1>
                 </div>
             </mat-card-header>
-            <mat-card-content class="mt2">
-                <mat-form-field fxFlex class="white-input width-100 mt2" hintLabel="{{oldPasswordError}}">
-                    <input matInput type="password" placeholder="Old Password" [(ngModel)]="user.oldPassword">
+            <mat-card-content>
+                <mat-form-field class="white-input width-100 mt2">
+                    <input [formControl]="oldPasswordControl" [errorStateMatcher]="matcher" matInput type="password" placeholder="Old Password" [(ngModel)]="user.oldPassword">
+                    <mat-error class="with-icon white-text-color" *ngIf="!user.oldPassword">
+                        <div class="mr02">
+                            <mat-icon>error_outline</mat-icon>
+                        </div>
+                        <div>
+                            Old Password cannot be empty
+                        </div>
+                    </mat-error>
                 </mat-form-field>
 
-                <mat-form-field fxFlex class="white-input width-100 mt2" hintLabel="{{newPasswordError}}">
-                    <input matInput type="password" placeholder="New Password" [(ngModel)]="user.newPassword">
+                <mat-form-field class="white-input width-100 mt2">
+                    <input [formControl]="newPasswordControl" [errorStateMatcher]="matcher" matInput type="password" placeholder="New Password" [(ngModel)]="user.newPassword">
+                    <mat-error class="with-icon white-text-color" *ngIf="!user.newPassword">
+                        <div class="mr02">
+                            <mat-icon>error_outline</mat-icon>
+                        </div>
+                        <div>
+                            New Password cannot be empty
+                        </div>
+                    </mat-error>
                 </mat-form-field>
 
-                <mat-form-field fxFlex class="white-input width-100 mt2" hintLabel="{{newPasswordMatchError}}">
+                <mat-form-field class="white-input width-100 mt2">
                     <input matInput type="password" placeholder="Confirm New Password" [(ngModel)]="user.confirmNewPassword">
                 </mat-form-field>
-
-                <div class="clearfix">
-                    <div class="col col-12 p1" fxFlex>
-                        <button class="width-100" mat-raised-button fxFlex (click)="changePassword()">Change Password</button>
+        
+                <div class="clearfix mt3">
+                    <div class="col col-12 p1">
+                        <button class="width-100" mat-raised-button (click)="changePassword()">Change Password</button>
                     </div>
                 </div>
             </mat-card-content>
