--- a/client/app/shared/toolbar/toolbar.component.html
+++ b/client/app/shared/toolbar/toolbar.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar color="primary" class="mat-elevation-z6">
-    <img src="/images/icon.png" alt="logo" style="height: 50px;" class="mr1">
+    <a class="flex" href="/">
+        <img src="/images/icon.png" alt="logo" style="height: 50px;" class="mr1">
+    </a>
     
     <span>
         <a style="color: white; text-decoration: none;" [routerLink]="['/home']">Smart Copy</a>
