--- a/client/app/dashboard/main/modals/delete/delete.component.html
+++ b/client/app/dashboard/main/modals/delete/delete.component.html
@@ -11,7 +11,7 @@
         </div>
 
         <div class="col col-6">
-            <button class="width-100 delete-button" cdkFocusInitial mat-button [mat-dialog-close]>Delete</button>
+            <button class="width-100 delete-button" cdkFocusInitial mat-button [mat-dialog-close]="true">Delete</button>
         </div>
     </div>
 </div>
