--- a/client/app/dashboard/user/change-password/change-password.component.html
+++ b/client/app/dashboard/user/change-password/change-password.component.html
@@ -15,7 +15,7 @@
             </mat-card-header>
             <mat-card-content>
                 <mat-form-field class="white-input width-100 mt2">
-                    <input [formControl]="oldPasswordControl" [errorStateMatcher]="matcher" matInput type="password" placeholder="Old Password" [(ngModel)]="user.oldPassword">
+                    <input [formControl]="oldPasswordControl" matInput type="password" placeholder="Old Password" [(ngModel)]="user.oldPassword">
                     <mat-error class="with-icon white-text-color" *ngIf="!user.oldPassword">
                         <div class="mr02">
                             <mat-icon>error_outline</mat-icon>
@@ -27,7 +27,7 @@
                 </mat-form-field>
 
                 <mat-form-field class="white-input width-100 mt2">
-                    <input [formControl]="newPasswordControl" [errorStateMatcher]="matcher" matInput type="password" placeholder="New Password" [(ngModel)]="user.newPassword">
+                    <input [formControl]="newPasswordControl" matInput type="password" placeholder="New Password" [(ngModel)]="user.newPassword">
                     <mat-error class="with-icon white-text-color" *ngIf="!user.newPassword">
                         <div class="mr02">
                             <mat-icon>error_outline</mat-icon>
