added copy to clipboard functionality + ripple to list + minor refactoring

--- a/client/app/dashboard/main/main.component.html
+++ b/client/app/dashboard/main/main.component.html
@@ -11,9 +11,9 @@
         </div>  
 
         <div *ngIf="!loadingData" class="width-100">
-            <mat-list class="width-100 copied-item-list" *ngIf="copiedItems && copiedItems.length">
+            <mat-nav-list class="width-100 copied-item-list" *ngIf="copiedItems && copiedItems.length">
                 <mat-list-item class="expandable white-background mat-elevation-z1" *ngFor="let copiedItem of copiedItems">
-                    <div class="copied-item-list-content clearfix width-100 flex items-center">
+                    <div ngxClipboard [cbContent]="copiedItem.value" (cbOnSuccess)="onCopy(copiedItem.value)" class="copied-item-list-content clearfix width-100 flex items-center">
                         <div class="col mr3">
                             <div class="flex items-center">
                                 <avatar class="avatar" matListIcon [background]="'#1E88E5'" [size]="40" [name]="copiedItem.value" [displayType]="'circle'"></avatar>
@@ -29,7 +29,7 @@
                         </div>
 
                         <div class="col col-1">
-                            <button class="pull-right" mat-icon-button [matMenuTriggerFor]="menu">
+                            <button class="pull-right" mat-icon-button [matMenuTriggerFor]="menu" (click)="$event.stopPropagation();">
                                 <mat-icon>more_vert</mat-icon>
                             </button>
                             <mat-menu #menu="matMenu">
@@ -46,7 +46,7 @@
                     </div>
 
                 </mat-list-item>
-            </mat-list>
+            </mat-nav-list>
     
             <div class="mt4 flex justify-center items-center" *ngIf="!copiedItems || !copiedItems.length">
                 <div class="mr3">
