increased min-height of copied item list element

--- a/client/app/dashboard/main/main.component.html
+++ b/client/app/dashboard/main/main.component.html
@@ -22,7 +22,7 @@
 
                         <div class="col col-10">
                             <p>
-                                <span> {{copiedItem.value}} </span>
+                                <span> {{copiedItem.displayValue}} </span>
                             </p>
 
                             <p matLine class="m0"></p>
